# l10n-paraguay

./: .codespellrc  .copier-answers.yml  .coveragerc  .flake8  .gitattributes  .gitignore  .p03-smoke-marker  .pre-commit-config.yaml  .yamllint  AGENTS.md  BUGS_BACKLOG.md  CHANGES.rst  CLAUDE.md  README.md  checklog-odoo.cfg  commitlint.config.js  commitlint.config.mjs  pyproject.toml
.github/: dependabot.yml
.github/workflows/: commitlint.yml  pre-commit.yml  test.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/phases/01-bloque-a-foundation-t-cnica-ci-cd-pre-commit/: 01-CONTEXT.md  01-DISCUSSION-LOG.md  01-PLAN-CHECK.md  01-PLAN.md  01-RESEARCH.md  p1b-diff-files.txt  p1b-diff-stat.txt  p1b-review.md  p1c-review-final.md  p1c-review.md
addons/: README.md
addons/l10n_py_account/: README.rst  __init__.py  __manifest__.py  hooks.py
addons/l10n_py_account/data/: l10n_latam_document_type_data.csv  l10n_py_afectacion_iva_data.csv
addons/l10n_py_account/models/: __init__.py  account_journal.py  (+9 more)
addons/l10n_py_base/: README.rst  __manifest__.py  hooks.py
data/catalogs/: README.md
docs/: 00_OBJECTIVE.md  01_SIFEN_KNOWLEDGE_BASE.md  02_SIFEN_REFERENCIA_COMPLETA.md  03_DOMAIN_MODEL.md  04_USE_CASES.md  05_DATA_MODEL.md  10_ODOO_MODULE_STRUCTURE.md  11_ODOO_ORM_GUIDE.md  12_ODOO_VIEWS_GUIDE.md  13_ODOO_SECURITY_GUIDE.md  14_ODOO_TESTING_GUIDE.md  15_ODOO_ACCOUNT_EDI_FRAMEWORK.md  20_OCA_GUIDELINES.md  21_OCA_DEVELOPMENT_BOOK.md  30_L10N_LATAM_BASE.md  31_L10N_LATAM_INVOICE_DOCUMENT.md  32_L10N_PERU_REFERENCE.md  33_L10N_ECUADOR_REFERENCE.md  34_L10N_ARGENTINA_REFERENCE.md  40_PYTHON_LIBRARIES.md  50_MODULES_ROADMAP.md  55_PRE_FASE_2_FOUNDATION.md  60_FASE_1_RETROSPECTIVA.md  README.md
docs/original/: README.md
infra/: README.md  docker-compose.yml
scripts/: build_index.py  codegraph_cli.py  extract_pdf.py  extract_puc_rg49.py  generate_geo_catalogs.py  generate_module_data.py  setup_references.ps1  setup_references.sh
(+102 files in other folders)
